@@ -26,6 +26,7 @@ version <next>:
 - Bitstream filter for editing metadata in VVC streams
 - Bitstream filter for converting VVC from MP4 to Annex B
 - scale_vt filter for videotoolbox
+- transpose_vt filter for videotoolbox
 
 version 6.0:
 - Radiance HDR image support
